--- a/styles/architect.css
+++ b/styles/architect.css
@@ -1,6 +1,82 @@
 /* Work sans font from google font */
-  @import url('https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700;800;900&display=swap");
+/* Shared Styles */
+* {
+    margin: 0 ;
+    padding: 0;
+  font-family: "Work Sans", sans-serif;
+}
 
-  *{
-    font-family: 'Work Sans', sans-serif;
-  }
+/* header styles */
+
+header {
+  background: rgba(255, 144, 14, 0.1);
+}
+
+.nav-title{
+    color: #131313;
+text-align: center;
+font-family: Work Sans;
+font-size: 2.85rem;
+font-weight: 700;
+}
+
+nav {
+  margin: 50px 230px;
+
+  display: flex;
+  align-items: center;
+}
+
+nav > ul {
+  display: flex;
+}
+
+nav li {
+  list-style: none;
+  margin-right: 30px;
+}
+
+nav li a {
+  text-decoration: none;
+  color:  #424242;
+  text-align: center;
+  font-family: Work Sans;
+  font-size: 1rem;
+  font-weight: 500;
+}
+
+nav {
+  display: flex;
+  justify-content: space-between;
+}
+
+/* banner style */
+
+.banner{
+    max-width: 860px;
+    text-align: center;
+    margin: 0 auto;
+}
+
+.banner-title{
+    color:  #131313;
+text-align: center;
+font-family: Work Sans;
+font-size: 4rem;
+font-weight: 700;
+}
+.banner-description{
+    color:  #727272;
+text-align: center;
+font-family: Work Sans;
+font-size: 16px;
+font-weight: 400;
+}
+
+.btn-primary{
+
+}
+.banner-img{
+
+}
