--- a/styles/architect.css
+++ b/styles/architect.css
@@ -2,8 +2,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700;800;900&display=swap");
 /* Shared Styles */
 * {
-    margin: 0 ;
-    padding: 0;
+  margin: 0;
+  padding: 0;
   font-family: "Work Sans", sans-serif;
 }
 
@@ -11,18 +11,19 @@
 
 header {
   background: rgba(255, 144, 14, 0.1);
+  padding: 50px 230px;
+
 }
 
-.nav-title{
-    color: #131313;
-text-align: center;
-font-family: Work Sans;
-font-size: 2.85rem;
-font-weight: 700;
+.nav-title {
+  color: #131313;
+  text-align: center;
+  font-family: Work Sans;
+  font-size: 2.85rem;
+  font-weight: 700;
 }
 
 nav {
-  margin: 50px 230px;
 
   display: flex;
   align-items: center;
@@ -39,7 +40,7 @@ nav li {
 
 nav li a {
   text-decoration: none;
-  color:  #424242;
+  color: #424242;
   text-align: center;
   font-family: Work Sans;
   font-size: 1rem;
@@ -53,30 +54,70 @@ nav {
 
 /* banner style */
 
-.banner{
-    max-width: 860px;
-    text-align: center;
-    margin: 0 auto;
+.banner {
+  max-width: 860px;
+  text-align: center;
+  margin: 0 auto;
 }
 
-.banner-title{
-    color:  #131313;
-text-align: center;
-font-family: Work Sans;
-font-size: 4rem;
-font-weight: 700;
+.banner-title {
+  color: #131313;
+  text-align: center;
+  font-family: Work Sans;
+  font-size: 4rem;
+  font-weight: 700;
 }
-.banner-description{
-    color:  #727272;
-text-align: center;
-font-family: Work Sans;
-font-size: 16px;
-font-weight: 400;
+.banner-description {
+  color: #727272;
+  text-align: center;
+  font-family: Work Sans;
+  font-size: 16px;
+  font-weight: 400;
+  margin-bottom: ;
 }
 
-.btn-primary{
-
+.btn-primary {
+  border-radius: 8px;
+  background: #ff900e;
+  color: #fff;
+  text-align: center;
+  font-family: Work Sans;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  margin-top: 30px;
+  padding: 20px 25px;
+  border: none;
+  cursor: pointer;
 }
-.banner-img{
-
+.banner-img img {
+    width: 100%;
+    margin-top: 50px;
 }
+
+/* Responsive media query */
+/* Mobile devices */
+@media screen and ( max-width: 576px) {
+    header{
+        padding: 20px;
+    }
+    nav {
+       
+        flex-direction: column;
+    }
+}
+
+/* Tablet */
+
+@media screen and (min-width: 576px) and (max-width: 992px) {
+    header{
+        padding: 50px;
+    }
+    nav {
+       
+        flex-direction: column;
+    }
+}
+}
+
