--- a/styles/architect.css
+++ b/styles/architect.css
@@ -6,13 +6,29 @@
   padding: 0;
   font-family: "Work Sans", sans-serif;
 }
+.btn-primary {
+  border-radius: 8px;
+  background: #ff900e;
+  color: #fff;
+  text-align: center;
+  font-family: Work Sans;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  margin-top: 30px;
+  padding: 20px 25px;
+  border: none;
+  cursor: pointer;
+}
+
+/* Shared section end */
 
 /* header styles */
 
 header {
   background: rgba(255, 144, 14, 0.1);
   padding: 50px 230px;
-
 }
 
 .nav-title {
@@ -24,7 +40,6 @@ header {
 }
 
 nav {
-
   display: flex;
   align-items: center;
 }
@@ -73,51 +88,122 @@ nav {
   font-family: Work Sans;
   font-size: 16px;
   font-weight: 400;
-  margin-bottom: ;
 }
 
-.btn-primary {
-  border-radius: 8px;
-  background: #ff900e;
-  color: #fff;
-  text-align: center;
-  font-family: Work Sans;
-  font-size: 20px;
-  font-style: normal;
-  font-weight: 600;
-  line-height: normal;
-  margin-top: 30px;
-  padding: 20px 25px;
-  border: none;
-  cursor: pointer;
-}
 .banner-img img {
-    width: 100%;
-    margin-top: 50px;
+  width: 100%;
+  margin-top: 50px;
+}
+/* Main section  */
+
+main {
+  max-width: 1440px;
+  margin: 0 auto;
 }
 
+.teams-container {
+  display: flex;
+  align-items: center;
+}
+.teams-img-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 1.5rem;
+}
+
+.teams-content {
+  padding-right: 70px;
+  padding-left: 70px;
+}
+
+
+
+.tt-1 {
+  color: var(--Dark-03, #727272);
+  font-family: Work Sans;
+  font-size: 45px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+
+.tt-2{
+    color: var(--Dark-01, #131313);
+font-family: Work Sans;
+font-size: 45px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+}
+
+.tt-3{
+    color: #FF900E;
+font-family: Work Sans;
+font-size: 45px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+}
+
+.teams-description{
+    /* width: 537px; */
+    color: var(--Dark-03, #727272);
+font-family: Work Sans;
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: 26px; /* 162.5% */
+margin-top: 25px;
+}
+.ex-btn{
+    margin-top: 30px;
+}
 /* Responsive media query */
 /* Mobile devices */
-@media screen and ( max-width: 576px) {
-    header{
-        padding: 20px;
-    }
-    nav {
-       
-        flex-direction: column;
-    }
+@media screen and (max-width: 576px) {
+  header {
+    padding: 20px;
+  }
+  nav {
+    flex-direction: column;
+  }
+
+  .teams-container {
+    flex-direction: column;
+}
+  .teams-img-container {
+    grid-template-columns: repeat(1, 1fr);
+    gap: 1.5rem;
+  }
+  .teams-content{
+    padding-top: 50px;
+    justify-content: center;
+    align-items: center;
+  }
+
+  
+  
+
 }
 
 /* Tablet */
 
 @media screen and (min-width: 576px) and (max-width: 992px) {
-    header{
-        padding: 50px;
-    }
-    nav {
-       
-        flex-direction: column;
-    }
+  header {
+    padding: 50px;
+  }
+  nav {
+    flex-direction: column;
+  }
+   .teams-container {
+    flex-direction: column;
+}
+.teams-content{
+    padding-top: 50px;
+    justify-content: center;
+    align-items: center;
+  }
+.teams-title{
+    margin-top: 40px;
 }
 }
-
