--- a/styles/architect.css
+++ b/styles/architect.css
@@ -2,8 +2,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700;800;900&display=swap");
 /* Shared Styles */
 * {
-  margin: 0;
-  padding: 0;
   font-family: "Work Sans", sans-serif;
 }
 .btn-primary {
@@ -28,7 +26,7 @@
 
 header {
   background: rgba(255, 144, 14, 0.1);
-  padding: 50px 230px;
+  padding: 50px 240px;
 }
 
 .nav-title {
@@ -42,6 +40,7 @@ header {
 nav {
   display: flex;
   align-items: center;
+  /* justify-content: space-between; */
 }
 
 nav > ul {
@@ -63,14 +62,14 @@ nav li a {
 }
 
 nav {
-  display: flex;
+  /* display: flex; */
   justify-content: space-between;
 }
 
 /* banner style */
 
 .banner {
-  max-width: 860px;
+  max-width: 800px;
   text-align: center;
   margin: 0 auto;
 }
@@ -91,14 +90,14 @@ nav {
 }
 
 .banner-img img {
+  margin-top: 20px;
   width: 100%;
-  margin-top: 50px;
 }
 /* Main section  */
 
 main {
   max-width: 1440px;
-  margin: 0 auto;
+  margin: 70px auto;
 }
 
 .teams-container {
@@ -116,8 +115,6 @@ main {
   padding-left: 70px;
 }
 
-
-
 .tt-1 {
   color: var(--Dark-03, #727272);
   font-family: Work Sans;
@@ -127,36 +124,96 @@ main {
   line-height: normal;
 }
 
-.tt-2{
-    color: var(--Dark-01, #131313);
-font-family: Work Sans;
-font-size: 45px;
-font-style: normal;
-font-weight: 700;
-line-height: normal;
+.tt-2 {
+  color: var(--Dark-01, #131313);
+  font-family: Work Sans;
+  font-size: 45px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
 }
 
-.tt-3{
-    color: #FF900E;
-font-family: Work Sans;
-font-size: 45px;
-font-style: normal;
-font-weight: 700;
-line-height: normal;
+.tt-3 {
+  color: #ff900e;
+  font-family: Work Sans;
+  font-size: 45px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
 }
 
-.teams-description{
-    /* width: 537px; */
-    color: var(--Dark-03, #727272);
-font-family: Work Sans;
-font-size: 16px;
-font-style: normal;
-font-weight: 400;
-line-height: 26px; /* 162.5% */
-margin-top: 25px;
+.teams-description {
+  /* width: 537px; */
+  color: var(--Dark-03, #727272);
+  font-family: Work Sans;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 26px; /* 162.5% */
+  margin-top: 25px;
 }
-.ex-btn{
-    margin-top: 30px;
+.ex-btn {
+  margin-top: 30px;
+}
+/* Facts section */
+
+.facts {
+  color: var(--Dark-01, #131313);
+  font-family: Work Sans;
+  font-size: 45px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+
+.facts-description {
+  color: var(--Dark-03, #727272);
+  font-family: Work Sans;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 26px; /* 162.5% */
+}
+.facts-card-container {
+  display: flex;
+  justify-content: space-around;
+}
+.facts-card-container .card {
+  border-radius: 5px;
+  border-radius: 8px;
+  border: 1px solid #ff900e;
+  text-align: center;
+  padding: 30px;
+}
+
+.facts-card-container .card img {
+  width: 45.221px;
+  height: 45.221px;
+  flex-shrink: 0;
+  padding: 30px 30px 0 30px;
+  /* padding-top: 30px; */
+}
+
+.facts-card-container .card-stats {
+  color: var(--Dark-02, #424242);
+  text-align: center;
+  font-family: Work Sans;
+  font-size: 45px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  margin-bottom: 0;
+  margin-top: 0px;
+}
+.facts-card-container .card-title {
+  color: var(--Dark-03, #727272);
+  font-family: Work Sans;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+  margin-top: 0;
+  margin-bottom: 50px;
 }
 /* Responsive media query */
 /* Mobile devices */
@@ -170,20 +227,16 @@ margin-top: 25px;
 
   .teams-container {
     flex-direction: column;
-}
+  }
   .teams-img-container {
     grid-template-columns: repeat(1, 1fr);
     gap: 1.5rem;
   }
-  .teams-content{
+  .teams-content {
     padding-top: 50px;
     justify-content: center;
     align-items: center;
   }
-
-  
-  
-
 }
 
 /* Tablet */
@@ -195,15 +248,15 @@ margin-top: 25px;
   nav {
     flex-direction: column;
   }
-   .teams-container {
+  .teams-container {
     flex-direction: column;
-}
-.teams-content{
+  }
+  .teams-content {
     padding-top: 50px;
     justify-content: center;
     align-items: center;
   }
-.teams-title{
+  .teams-title {
     margin-top: 40px;
-}
+  }
 }
