--- a/styles/architect.css
+++ b/styles/architect.css
@@ -215,6 +215,38 @@ main {
   margin-top: 0;
   margin-bottom: 50px;
 }
+
+/* Sponsors section */
+
+.sponsors-section {
+    text-align: center;
+}
+.sponsors-title {
+  color: var(--Dark-01, #131313);
+  font-family: Work Sans;
+  font-size: 45px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  text-align: center;
+
+}
+.sponsors-paragraph {
+  color: var(--Dark-03, #727272);
+  text-align: center;
+  font-family: Work Sans;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 26px; /* 162.5% */
+}
+
+.sponsors-image-container{
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 50px;
+}
+
 /* Responsive media query */
 /* Mobile devices */
 @media screen and (max-width: 576px) {
@@ -236,6 +268,19 @@ main {
     padding-top: 50px;
     justify-content: center;
     align-items: center;
+  }
+  .facts-card-container {
+    flex-direction: column;
+    gap: 20px;
+  }
+
+  .sponsors-image-container{
+    flex-direction: column;
+    gap: 20px;
+    align-items: center;
+  }
+  .sponsors-image-container img{
+    width: 165px;
   }
 }
 
@@ -259,4 +304,18 @@ main {
   .teams-title {
     margin-top: 40px;
   }
+
+  .facts-card-container .card {
+    padding: 10px;
+  }
+
+  .sponsors-image-container{
+    flex-direction: column;
+    gap: 50px;
+    align-items: center;
+  }
+  .sponsors-image-container img{
+    width: 210px;
+  }
+
 }
