--- a/styles/architect.css
+++ b/styles/architect.css
@@ -155,6 +155,90 @@ main {
 .ex-btn {
   margin-top: 30px;
 }
+
+/* Features */
+
+.Features {
+  display: flex;
+  margin-top: 130px;
+  gap: 140px;
+}
+
+.feature-img img{
+height: 80%;
+
+}
+
+.features-title {
+  color: var(--Dark-01, #131313);
+  font-family: Work Sans;
+  font-size: 45px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+.feature-paragraph {
+  color: var(--Dark-03, #727272);
+  font-family: Work Sans;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 26px; /* 162.5% */
+}
+
+.feature-paragraph-title {
+  color: var(--Dark-01, #131313);
+  font-family: Work Sans;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+}
+
+.Features .card {
+  padding: 30px;
+  margin-bottom: 20px;
+  border-radius: 8px;
+  background: #fff;
+  box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.06);
+}
+
+.feature-border {
+  border-left: 5px solid #ff900e;
+  padding-left: 20px;
+}
+
+.ten-years-badge {
+  border-radius: 8px;
+  background: #ff900e;
+  width: 350px;
+  padding: 40px 45px;
+  position: relative;
+  bottom: 120px;
+  right: 90px;
+}
+
+.ten-years-badge h2 {
+  color: #fff;
+  text-align: center;
+  font-family: Work Sans;
+  font-size: 65px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 70px; /* 107.692% */
+  margin: 0;
+}
+.ten-years-badge p {
+  color: #fff;
+  font-family: Work Sans;
+  font-size: 25px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 40px;
+  text-align: center;
+  margin-top: 0;
+  margin-bottom: 0;
+}
 /* Facts section */
 
 .facts {
@@ -219,7 +303,7 @@ main {
 /* Sponsors section */
 
 .sponsors-section {
-    text-align: center;
+  text-align: center;
 }
 .sponsors-title {
   color: var(--Dark-01, #131313);
@@ -229,7 +313,6 @@ main {
   font-weight: 700;
   line-height: normal;
   text-align: center;
-
 }
 .sponsors-paragraph {
   color: var(--Dark-03, #727272);
@@ -241,10 +324,31 @@ main {
   line-height: 26px; /* 162.5% */
 }
 
-.sponsors-image-container{
-    display: flex;
-    justify-content: space-evenly;
-    margin-top: 50px;
+.sponsors-image-container {
+  display: flex;
+  justify-content: space-evenly;
+  margin-top: 50px;
+}
+
+/* Footer section */
+footer {
+  border-radius: 8px;
+  background: #fff4e7;
+  margin: 0 230px;
+}
+
+footer > div {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.footer-title {
+  color: var(--Dark-02, #424242);
+  font-family: Work Sans;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
 }
 
 /* Responsive media query */
@@ -257,7 +361,7 @@ main {
     flex-direction: column;
   }
 
-  .teams-container {
+  .teams-container , .Features {
     flex-direction: column;
   }
   .teams-img-container {
@@ -274,13 +378,20 @@ main {
     gap: 20px;
   }
 
-  .sponsors-image-container{
+  .sponsors-image-container {
     flex-direction: column;
     gap: 20px;
     align-items: center;
   }
-  .sponsors-image-container img{
+  .sponsors-image-container img {
     width: 165px;
+  }
+  .feature-img img{
+    width: 90%;
+  }
+  .ten-years-badge{
+    position: static;
+    max-width: 300px;
   }
 }
 
@@ -293,7 +404,7 @@ main {
   nav {
     flex-direction: column;
   }
-  .teams-container {
+  .teams-container .Features {
     flex-direction: column;
   }
   .teams-content {
@@ -309,13 +420,12 @@ main {
     padding: 10px;
   }
 
-  .sponsors-image-container{
+  .sponsors-image-container {
     flex-direction: column;
     gap: 50px;
     align-items: center;
   }
-  .sponsors-image-container img{
+  .sponsors-image-container img {
     width: 210px;
   }
-
 }
